<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NoiseTube</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_measurement">Measure</string>
    <string name="action_profile">Profile</string>
    <string name="edit_message">Enter a message</string>
    <string name="home_button_go">Go</string>
    <string name="home_button_stop">Stop</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_display_profile">Profile</string>
    <string name="title_section1">Score</string>
    <string name="title_section2">Level</string>
    <string name="title_section3">Amount</string>
    <string name="title_activity_new_profile">Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="profile_line_2">Profile name of user</string>
    <string name="profile_userName">User Name</string>
    <string name="profile_email">Email Address</string>
    <string name="profile_exp">0/247</string>
    <string name="profile_lvl">1</string>
    <string name="profile_lvl_text">Level: </string>
    <string name="profile_exp_text">Experience Points: </string>
    <string name="profile_msr_text"># Measurements: </string>
    <string name="profile_msr">1</string>
    <string name="profile_time_text">Time Measured: </string>
    <string name="profile_time">00:00:00</string>
    <string name="no_db_lvl">Not measuring</string>
    <string name="location_default">(50.86408;4.417720)</string>
    <string name="home_max_db">Maximum Db:</string>
    <string name="home_avg_db">Avgerage Db:</string>
    <string name="home_min_db">Minimum Db:</string>
    <string name="home_time">Running Time:</string>
    <string name="title_activity_post_result">PostResult</string>
    <string name="post_points">Points</string>
    <string name="post_multi_loc">Location Multiplier</string>
    <string name="post_multi_time">Location Multiplier</string>
    <string name="post_multi_bonus">Bonus Multiplier</string>
    <string name="post_points_total">Total Points</string>
    <string name="post_lvl">Level</string>
    <string name="title_activity_leaderboard">Leaderboards</string>
    <string name="title_activity_badges">Badges</string>
    <string name="title_activity_poi">Point Of Intrests</string>
    <string name="title_activity_poi_map">Point of Interest Map</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_poi_maps">Point of Interest Map</string>

</resources>
