<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_list_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/profile_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/profile_background"
        android:contentDescription="@string/profile_icon" />

    <TextView
        android:id="@+id/profile_userName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="user name"
        android:textAlignment="textEnd"
        android:textSize="10pt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:hint="email adress"
        android:textAlignment="textEnd"
        android:textSize="8pt"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/card2"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight=".5"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/profile_exp_text" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/profile_lvl_text" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/profile_msr_text" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/profile_time_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight=".5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/profile_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/profile_exp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_lvl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/profile_lvl"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_msr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/profile_msr"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/profile_time"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/post_leaderboard"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_blue_small"
        android:gravity="center"
        android:onClick="startBadges"
        android:text="Badges"
        android:textColor="#FFFFFF" />

</LinearLayout>