<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.noisetubeinteractive2.MainActivity" >

    <item 
        android:id="@+id/action_measurement"
        android:orderInCategory= "1"
        android:showAsAction="always"
        android:title="@string/action_measurement"
        android:icon="@drawable/ic_action_new"/>
    
    <item 
        android:id="@+id/action_profile"
        android:orderInCategory= "2"
        android:showAsAction="always"
        android:title="@string/action_profile"
        android:icon="@drawable/ic_action_person"/>
    
    <!-- Setting always defined as overvlow aka showAsAction = never -->
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
