<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.noisetubeinteractive2.PostResult$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/post_layout_points"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card2"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight=".5"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/post_points" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/post_multi_loc" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/post_multi_time" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/post_multi_bonus" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/post_points_total"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight=".5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/post_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:hint="0" />

            <TextView
                android:id="@+id/post_multi_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:hint="0" />

            <TextView
                android:id="@+id/post_multi_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:hint="0" />

            <TextView
                android:id="@+id/post_multi_bonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:hint="0" />

            <TextView
                android:id="@+id/post_points_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:hint="0" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_layout_points"
        android:layout_marginTop="10dp"
        android:background="@drawable/card2"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Progress"
            android:layout_marginBottom="5dp"
            android:textSize="9pt"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/post_progressbar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:indeterminate="false"
            android:progress="40" />
        
         <TextView
            android:id="@+id/post_progress_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="688/1132"
            android:textStyle="italic" />
    </LinearLayout>

</RelativeLayout>